# musclub-manager

./: README.md  docker-compose.yaml  package.json  tailwind.config.ts
.github/workflows/: lint-commit-messages.yml
musclub-manager-backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
musclub-manager-backend/alembic/: env.py
musclub-manager-backend/alembic/versions/: 0422a147fab6_make_member_socials_not_null.py  46cef8277b5e_add_more_fields_to_member.py  85e20e7326a3_initial_migration.py  864d4e7707ab_add_column_for_member_photo.py  c3d8b72f95c9_add_indexes_for_relations.py
musclub-manager-backend/musclub_manager_backend/: app.py  db_models.py  json_models.py
musclub-manager-frontend/: package-lock.json  package.json
musclub-manager-frontend/src/api/: client.ts  index.ts
musclub-manager-frontend/src/app/: layout.tsx  page.tsx
musclub-manager-frontend/src/app/events/[id]/: page.tsx
musclub-manager-frontend/src/app/events/[id]/edit/: page.tsx
musclub-manager-frontend/src/app/members/: page.tsx
musclub-manager-frontend/src/app/members/[id]/: page.tsx
musclub-manager-frontend/src/app/members/[id]/edit/: page.tsx
musclub-manager-frontend/src/components/Layout/: Header.tsx  Layout.tsx  RouteBreadcrumbs.tsx  Sidebar.tsx
musclub-manager-frontend/src/components/theme/ThemeButton/: ThemeButton.tsx
musclub-manager-frontend/src/components/theme/ThemeContext/: ThemeContext.tsx  ThemeContextProvider.tsx
musclub-manager-frontend/src/components/theme/ThemeProvider/: ThemeProvider.tsx
src/app/: page.tsx
src/styles/: globals.scss
