[tool.poetry]
name = "musclub-manager-backend"
version = "0.1.0"
description = "Backend for musclub-manager"
authors = ["cjvth <vuki03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["all"], version = "^0.115.5"}
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
